<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">找新窝</string>
    <string name="app_description">基于豆瓣租房小组数据的搜房App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_search">搜索</string>
    <string name="edit_search_hint">请输入北京地点，如 中关村</string>
    <string name="text_update">检查更新</string>
    <string name="text_site">zhaoxinwo.com</string>
    <string name="text_donate">捐助</string>
    <string name="text_share">分享</string>
    <string name="text_cry">找新窝旨在给北漂ers提供一种新的找房方式，豆瓣租房小组便是极好的数据来源了。\n这种方式的成本比较低，找到的房东、合租者相对靠谱些，性价比很高。\n我们喜欢豆瓣，喜欢小清新，拒绝广告，拒绝获取用户信息。\n但也真是囊肿羞涩，穷学生党。域名、服务器是一笔不小的开支。\n如果找新窝帮到了您，希望您能够捐助我们，帮助找新窝走的更远！\n我们会在官网(zhaoxinwo.com)列出所有的捐助者及资金流向，给大家提供更好的使用体验。\n\n支付宝：zhangxiaoyang.hit@gmail.com\n请注明捐助找新窝，谢谢！</string>

</resources>