<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <com.zhaoxinwo.utils.EditTextWithDelete
            android:id="@+id/textKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:text=""
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="12dp"
            android:background="@color/button_text_bgd"
            android:text="@string/button_search"
            android:textColor="@color/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:text="@string/text_share"
            android:textColor="@color/text_text" />

        <TextView
            android:id="@+id/textStatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_statistic"
            android:textColor="@color/text_text" />

        <TextView
            android:id="@+id/textDonate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/text_donate"
            android:textColor="@color/text_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:text="@string/text_site"
            android:textColor="@color/text_text" />

        <TextView
            android:id="@+id/textUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/text_update"
            android:textColor="@color/Gray" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >
    </WebView>

</LinearLayout>